adding token, almost done
